fix: style sizes of navbar search bar and align button

--- a/Client/src/app/navbar/navbar.component.css
+++ b/Client/src/app/navbar/navbar.component.css
@@ -1,1 +1,7 @@
 .input-mysize { width: 700px }
+
+
+.btn {
+
+	margin-top: 0.4rem;
+}
